--- a/auth_authz.html
+++ b/auth_authz.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Role-Based Ordering System Demo (SQL Injection)</title>
+    <title>Role-Based Ordering System Demo</title>
     <script src="https://sql.js.org/dist/sql-wasm.js"></script>
     <link
       rel="stylesheet"
