--- a/auth_authz.html
+++ b/auth_authz.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Role-Based Ordering System Demo</title>
     <script src="https://sql.js.org/dist/sql-wasm.js"></script>
     <link
