--- a/auth_authz.html
+++ b/auth_authz.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Role-Based Ordering System Demo</title>
     <script src="https://sql.js.org/dist/sql-wasm.js"></script>
     <link
@@ -54,10 +54,58 @@
         padding: 2px 5px;
         border-radius: 3px;
       }
+
+      @media (max-width: 768px) {
+        #allUsersTable thead {
+          display: none;
+        }
+
+        #allUsersTable,
+        #allUsersTable tbody,
+        #allUsersTable tr,
+        #allUsersTable td {
+          display: block;
+          width: 100%;
+        }
+
+        #allUsersTable tr {
+          margin-bottom: 1rem;
+          border: 1px solid #ccc;
+          border-radius: 6px;
+          padding: 0.5rem;
+          background: #f9f9f9;
+        }
+
+        #allUsersTable td {
+          padding: 0.5rem;
+          text-align: left;
+          position: relative;
+        }
+
+        #allUsersTable td::before {
+          content: attr(data-label);
+          font-weight: bold;
+          display: block;
+          margin-bottom: 0.3rem;
+        }
+      }
     </style>
   </head>
   <body style="background-color: rgb(233, 233, 233)">
-    <h1>Ordering System Demo with Role-Based Access</h1>
+    <nav id="topNav" class="">
+      <div
+        style="
+          display: flex;
+          align-items: center;
+          background: #eee;
+          padding: 0.75rem 1rem;
+          border-bottom: 1px solid #ccc;
+        "
+      >
+        <strong style="font-size: 1.2rem">Auth/AuthN Demo</strong>
+        <div style="margin-left: 2rem; display: flex; gap: 1rem"></div>
+      </div>
+    </nav>
 
     <div id="loginDiv">
       <div>
@@ -203,6 +251,13 @@
         >
           <h3>Your Preferences</h3>
           <p id="userPrefs"></p>
+          <label>
+            Update Your Preferences:
+            <input type="text" id="userPrefInput" />
+          </label>
+          <button type="button" onclick="saveUserPreference()">
+            Save Preference
+          </button>
         </div>
       </div>
 
@@ -216,20 +271,33 @@
           padding-bottom: 10px;
         "
       >
-        <div id="adminSection" class="hidden">
+        <div
+          id="adminSection"
+          class="hidden"
+          style="max-width: 100%; padding: 1rem"
+        >
           <h2>Admin Tools: All Users & Preferences</h2>
-          <table id="allUsersTable">
-            <thead>
-              <tr>
-                <th>Username</th>
-                <th>Email</th>
-                <th>Role</th>
-                <th>Preferences</th>
-                <th>Edit Preferences</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
+          <div
+            style="overflow-x: auto; border: 1px solid #ccc; border-radius: 8px"
+          >
+            <table
+              id="allUsersTable"
+              style="width: 100%; border-collapse: collapse; min-width: 600px"
+            >
+              <thead style="background: #f0f0f0">
+                <tr>
+                  <th style="padding: 0.5rem; text-align: left">Username</th>
+                  <th style="padding: 0.5rem; text-align: left">Email</th>
+                  <th style="padding: 0.5rem; text-align: left">Role</th>
+                  <th style="padding: 0.5rem; text-align: left">Preferences</th>
+                  <th style="padding: 0.5rem; text-align: left">
+                    Edit Preferences
+                  </th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
         </div>
 
         <div id="superAdminSection" class="hidden">
@@ -373,6 +441,8 @@
           hide(document.getElementById("appDiv"));
           show(document.getElementById("loginDiv"));
           document.getElementById("loginMessage").textContent = "";
+          document.getElementById("username").value = "";
+          document.getElementById("password").value = "";
           clearUI();
         });
       }
@@ -652,6 +722,22 @@
 
       function fillProduct(newProduct) {
         document.getElementById("newProduct").value = newProduct;
+      }
+
+      function saveUserPreference() {
+        const newPref = document.getElementById("userPrefInput").value;
+        if (!newPref) return;
+
+        const query = `UPDATE users SET preferences='${newPref}' WHERE username='${currentUser.username}';`;
+        try {
+          debugSQL(query);
+          db.run(query);
+          currentUser.preferences = newPref;
+          alert("Preference updated.");
+          renderUserSection(); // re-render to update display
+        } catch (err) {
+          alert("SQL Error: " + err.message);
+        }
       }
 
       init();
