--- a/auth_authz.html
+++ b/auth_authz.html
@@ -9,6 +9,17 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <style>
       body {
         font-family: sans-serif;
@@ -92,24 +103,32 @@
     </style>
   </head>
   <body style="background-color: rgb(233, 233, 233)">
-    <nav id="topNav" class="">
-      <div
-        style="
-          display: flex;
-          align-items: center;
-          background: #eee;
-          padding: 0.75rem 1rem;
-          border-bottom: 1px solid #ccc;
-        "
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark"
+      style="padding: 5px; margin-bottom: 10px"
+    >
+      <a class="navbar-brand" href="#">
+        <i class="bi bi-cup-hot"></i> AuthN/AuthZ Demo</a
       >
-        <strong style="font-size: 1.2rem">Auth/AuthN Demo</strong>
-        <div style="margin-left: 2rem; display: flex; gap: 1rem"></div>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav"></ul>
       </div>
     </nav>
 
     <div id="loginDiv">
       <div>
-        <p>Quick Login:</p>
+        <i>Quick Login:</i><br />
         <button type="button" onclick="fillLogin('user1', 'userpass')">
           <i class="bi bi-person">Log in as User</i>
         </button>
@@ -145,7 +164,7 @@
       </div>
 
       <div>
-        <p>Quick SQL Injection Attempts:</p>
+        <i>Quick SQL Injection Attempts:</i><br />
         <button type="button" onclick="fillLogin(`' OR 1=1 --`, '')">
           <i class="bi bi-bug"></i><code>Username: ' OR 1=1 --</code>
         </button>
@@ -168,7 +187,12 @@
         Welcome, <strong id="loggedInUser"></strong>! Role:
         <em id="loggedInRole"></em>
       </p>
-      <button id="logoutBtn">Logout</button>
+      <button
+        id="logoutBtn"
+        style="color: red; background-color: rgba(255, 166, 0, 0.487)"
+      >
+        Logout <i class="bi bi-box-arrow-right"></i>
+      </button>
 
       <div id="userSection" class="hidden">
         <div
