--- a/auth_authz.html
+++ b/auth_authz.html
@@ -500,8 +500,7 @@
 
             document.getElementById("loginMessage").style.color = "red";
             document.getElementById("loginMessage").textContent =
-              "SQL Injection detected! Dumping all users:\n" +
-              JSON.stringify(allUsers, null, 2);
+              "Error:\n" + JSON.stringify(allUsers, null, 2);
           } else if (res.length && res[0].values.length === 1) {
             // Normal single-user login
             const u = res[0].values[0];
