--- a/auth_authz.html
+++ b/auth_authz.html
@@ -102,7 +102,7 @@
       }
     </style>
   </head>
-  <body style="background-color: rgb(233, 233, 233)">
+  <body style="background-color: rgba(94, 176, 253, 0.179)">
     <nav
       class="navbar navbar-expand-lg navbar-dark bg-dark"
       style="padding: 5px; margin-bottom: 10px"
@@ -274,7 +274,7 @@
             padding-bottom: 10px;
           "
         >
-          <h3>Your Preferences</h3>
+          <h2>Your Preferences</h2>
           <p id="userPrefs"></p>
           <label>
             Update Your Preferences:
