--- a/auth_authz.html
+++ b/auth_authz.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
     ></script>
     <style>
-      body {
+      #main {
         font-family: sans-serif;
         padding: 2rem;
         max-width: 900px;
@@ -110,6 +110,20 @@
       <a class="navbar-brand" href="#">
         <i class="bi bi-cup-hot"></i> AuthN/AuthZ Demo</a
       >
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"> <span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#"></a>
+          </li>
+        </ul>
+        <span class="navbar-text">Chris Milheim</span>
+      </div>
       <button
         class="navbar-toggler"
         type="button"
@@ -125,79 +139,23 @@
         <ul class="navbar-nav"></ul>
       </div>
     </nav>
-
-    <div id="loginDiv">
-      <div>
-        <i>Quick Login:</i><br />
-        <button type="button" onclick="fillLogin('user1', 'userpass')">
-          <i class="bi bi-person">Log in as User</i>
-        </button>
-        <button type="button" onclick="fillLogin('admin1', 'adminpass')">
-          <i class="bi bi-person-up">Log in as Admin</i>
-        </button>
-        <button type="button" onclick="fillLogin('super1', 'superpass')">
-          <i class="bi bi-person-lock">Log in as Super Admin</i>
-        </button>
-      </div>
-      <div
-        style="
-          border: 2px solid green;
-          margin-top: 10px;
-          margin-bottom: 10px;
-          padding-left: 10px;
-          padding-right: 10px;
-          padding-bottom: 10px;
-        "
-      >
-        <h2>Login</h2>
-        <form id="loginForm">
-          <label
-            >Username: <input type="text" id="username" autocomplete="off"
-          /></label>
-          <label
-            >Password: <input type="text" id="password" autocomplete="off"
-          /></label>
-          <button type="submit" style="color: green">
-            <i class="bi bi-door-open">Login</i>
+    <div id="main">
+      <div id="loginDiv">
+        <div>
+          <i>Quick Login:</i><br />
+          <button type="button" onclick="fillLogin('user1', 'userpass')">
+            <i class="bi bi-person">Log in as User</i>
           </button>
-        </form>
-      </div>
-
-      <div>
-        <i>Quick SQL Injection Bugs:</i><br />
-        <button type="button" onclick="fillLogin(`' OR 1=1 --`, '')">
-          <i class="bi bi-bug"></i><code>Username: ' OR 1=1 --</code>
-        </button>
-        <button type="button" onclick="fillLogin(`super1' --`, '')">
-          <i class="bi bi-bug"></i><code>Username: super1' --</code>
-        </button>
-        <button
-          type="button"
-          onclick="fillLogin(`' UNION SELECT username, password, role, email, preferences FROM users --`, '')"
-        >
-          <i class="bi bi-bug"></i> Union Injection
-        </button>
-      </div>
-
-      <div id="loginMessage" style="color: red"></div>
-    </div>
-
-    <div id="appDiv" class="hidden">
-      <p>
-        Welcome, <strong id="loggedInUser"></strong>! Role:
-        <em id="loggedInRole"></em>
-        <button
-          id="logoutBtn"
-          style="color: red; background-color: rgba(255, 166, 0, 0.487)"
-        >
-          Logout <i class="bi bi-box-arrow-right"></i>
-        </button>
-      </p>
-
-      <div id="userSection" class="hidden">
+          <button type="button" onclick="fillLogin('admin1', 'adminpass')">
+            <i class="bi bi-person-up">Log in as Admin</i>
+          </button>
+          <button type="button" onclick="fillLogin('super1', 'superpass')">
+            <i class="bi bi-person-lock">Log in as Super Admin</i>
+          </button>
+        </div>
         <div
           style="
-            border: 2px solid blue;
+            border: 2px solid green;
             margin-top: 10px;
             margin-bottom: 10px;
             padding-left: 10px;
@@ -205,123 +163,201 @@
             padding-bottom: 10px;
           "
         >
-          <h3>Add New Order</h3>
-          <form id="addOrderForm">
-            <label>
-              Product:
-              <input type="text" id="newProduct" autocomplete="off" />
-            </label>
-            <label>
-              Quantity:
-              <input type="text" id="newQuantity" autocomplete="off" />
-            </label>
+          <h2>Login</h2>
+          <form id="loginForm">
+            <label
+              >Username: <input type="text" id="username" autocomplete="off"
+            /></label>
+            <label
+              >Password: <input type="text" id="password" autocomplete="off"
+            /></label>
             <button type="submit" style="color: green">
-              <i class="bi bi-bag-plus"></i>Add Order
+              <i class="bi bi-door-open">Login</i>
             </button>
           </form>
-
-          <p>
-            <i> Quick SQL Injection Bugs:</i><br />
-            <button
-              type="button"
-              onclick="fillProduct(`Widget'); UPDATE users SET role='admin' WHERE
-          username='user1'; --`)"
-            >
-              <i class="bi bi-bug"></i>
-              <code
-                >Widget'); UPDATE users SET role='admin' WHERE username='user1';
-                --
-              </code>
-            </button>
-            <br />
-          </p>
         </div>
-        <div
-          style="
-            border: 2px solid rgb(255, 217, 0);
-            margin-top: 10px;
-            margin-bottom: 10px;
-            padding-left: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-          "
-        >
-          <h2><i class="bi bi-bag"></i>Your Orders</h2>
-          <div
-            id="addOrderMessage"
-            style="color: red; margin-top: 0.5rem"
-          ></div>
 
-          <table id="userOrdersTable">
-            <thead>
-              <tr>
-                <th>Order ID</th>
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Status</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
-        <div
-          style="
-            border: 2px solid rgb(191, 0, 255);
-            margin-top: 10px;
-            margin-bottom: 10px;
-            padding-left: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-          "
-        >
-          <h2>Your Preferences</h2>
-          <p id="userPrefs"></p>
-          <label>
-            Update Your Preferences:
-            <input type="text" id="userPrefInput" />
-          </label>
+        <div>
+          <i>Quick SQL Injection Bugs:</i><br />
+          <button type="button" onclick="fillLogin(`' OR 1=1 --`, '')">
+            <i class="bi bi-bug"></i><code>Username: ' OR 1=1 --</code>
+          </button>
+          <button type="button" onclick="fillLogin(`super1' --`, '')">
+            <i class="bi bi-bug"></i><code>Username: super1' --</code>
+          </button>
           <button
             type="button"
-            onclick="saveUserPreference()"
-            style="color: green"
+            onclick="fillLogin(`' UNION SELECT username, password, role, email, preferences FROM users --`, '')"
           >
-            <i class="bi bi-gear"></i> Save Preference
+            <i class="bi bi-bug"></i> Union Injection
           </button>
         </div>
+
+        <div id="loginMessage" style="color: red"></div>
       </div>
 
-      <div
-        style="
-          border: 2px solid rgb(255, 0, 0);
-          margin-top: 10px;
-          margin-bottom: 10px;
-          padding-left: 10px;
-          padding-right: 10px;
-          padding-bottom: 10px;
-        "
-      >
-        <div
-          id="adminSection"
-          class="hidden"
-          style="max-width: 100%; padding: 1rem"
-        >
-          <h2>Admin Tools: All Users & Preferences</h2>
-          <div
-            style="overflow-x: auto; border: 1px solid #ccc; border-radius: 8px"
+      <div id="appDiv" class="hidden">
+        <p>
+          Welcome, <strong id="loggedInUser"></strong>! Role:
+          <em id="loggedInRole"></em>
+          <button
+            id="logoutBtn"
+            style="color: red; background-color: rgba(255, 166, 0, 0.487)"
           >
-            <table
-              id="allUsersTable"
-              style="width: 100%; border-collapse: collapse; min-width: 600px"
-            >
-              <thead style="background: #f0f0f0">
+            Logout <i class="bi bi-box-arrow-right"></i>
+          </button>
+        </p>
+
+        <div id="userSection" class="hidden">
+          <div
+            style="
+              border: 2px solid blue;
+              margin-top: 10px;
+              margin-bottom: 10px;
+              padding-left: 10px;
+              padding-right: 10px;
+              padding-bottom: 10px;
+            "
+          >
+            <h3>Add New Order</h3>
+            <form id="addOrderForm">
+              <label>
+                Product:
+                <input type="text" id="newProduct" autocomplete="off" />
+              </label>
+              <label>
+                Quantity:
+                <input type="text" id="newQuantity" autocomplete="off" />
+              </label>
+              <button type="submit" style="color: green">
+                <i class="bi bi-bag-plus"></i>Add Order
+              </button>
+            </form>
+
+            <p>
+              <i> Quick SQL Injection Bugs:</i><br />
+              <button
+                type="button"
+                onclick="fillProduct(`Widget'); UPDATE users SET role='admin' WHERE
+          username='user1'; --`)"
+              >
+                <i class="bi bi-bug"></i>
+                <code
+                  >Widget'); UPDATE users SET role='admin' WHERE
+                  username='user1'; --
+                </code>
+              </button>
+              <br />
+            </p>
+          </div>
+          <div
+            style="
+              border: 2px solid rgb(255, 217, 0);
+              margin-top: 10px;
+              margin-bottom: 10px;
+              padding-left: 10px;
+              padding-right: 10px;
+              padding-bottom: 10px;
+            "
+          >
+            <h2><i class="bi bi-bag"></i>Your Orders</h2>
+            <div
+              id="addOrderMessage"
+              style="color: red; margin-top: 0.5rem"
+            ></div>
+
+            <table id="userOrdersTable">
+              <thead>
                 <tr>
-                  <th style="padding: 0.5rem; text-align: left">Username</th>
-                  <th style="padding: 0.5rem; text-align: left">Email</th>
-                  <th style="padding: 0.5rem; text-align: left">Role</th>
-                  <th style="padding: 0.5rem; text-align: left">Preferences</th>
-                  <th style="padding: 0.5rem; text-align: left">
-                    Edit Preferences
-                  </th>
+                  <th>Order ID</th>
+                  <th>Product</th>
+                  <th>Quantity</th>
+                  <th>Status</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+          <div
+            style="
+              border: 2px solid rgb(191, 0, 255);
+              margin-top: 10px;
+              margin-bottom: 10px;
+              padding-left: 10px;
+              padding-right: 10px;
+              padding-bottom: 10px;
+            "
+          >
+            <h2>Your Preferences</h2>
+            <p id="userPrefs"></p>
+            <label>
+              Update Your Preferences:
+              <input type="text" id="userPrefInput" />
+            </label>
+            <button
+              type="button"
+              onclick="saveUserPreference()"
+              style="color: green"
+            >
+              <i class="bi bi-gear"></i> Save Preference
+            </button>
+          </div>
+        </div>
+
+        <div
+          style="
+            border: 2px solid rgb(255, 0, 0);
+            margin-top: 10px;
+            margin-bottom: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-bottom: 10px;
+          "
+        >
+          <div
+            id="adminSection"
+            class="hidden"
+            style="max-width: 100%; padding: 1rem"
+          >
+            <h2>Admin Tools: All Users & Preferences</h2>
+            <div
+              style="
+                overflow-x: auto;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+              "
+            >
+              <table
+                id="allUsersTable"
+                style="width: 100%; border-collapse: collapse; min-width: 600px"
+              >
+                <thead style="background: #f0f0f0">
+                  <tr>
+                    <th style="padding: 0.5rem; text-align: left">Username</th>
+                    <th style="padding: 0.5rem; text-align: left">Email</th>
+                    <th style="padding: 0.5rem; text-align: left">Role</th>
+                    <th style="padding: 0.5rem; text-align: left">
+                      Preferences
+                    </th>
+                    <th style="padding: 0.5rem; text-align: left">
+                      Edit Preferences
+                    </th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
+            </div>
+          </div>
+
+          <div id="superAdminSection" class="hidden">
+            <h2>Super Admin Panel: Manage User Roles</h2>
+            <table id="roleManageTable">
+              <thead>
+                <tr>
+                  <th>Username</th>
+                  <th>Current Role</th>
+                  <th>Change Role</th>
+                  <th>Update</th>
                 </tr>
               </thead>
               <tbody></tbody>
@@ -329,33 +365,17 @@
           </div>
         </div>
 
-        <div id="superAdminSection" class="hidden">
-          <h2>Super Admin Panel: Manage User Roles</h2>
-          <table id="roleManageTable">
-            <thead>
-              <tr>
-                <th>Username</th>
-                <th>Current Role</th>
-                <th>Change Role</th>
-                <th>Update</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-          </table>
-        </div>
+        <div
+          id="debugSQL"
+          style="
+            margin-top: 2rem;
+            font-family: monospace;
+            white-space: pre-wrap;
+            color: #666;
+          "
+        ></div>
       </div>
-
-      <div
-        id="debugSQL"
-        style="
-          margin-top: 2rem;
-          font-family: monospace;
-          white-space: pre-wrap;
-          color: #666;
-        "
-      ></div>
     </div>
-
     <script>
       let db;
       let currentUser = null;
