--- a/auth_authz.html
+++ b/auth_authz.html
@@ -219,7 +219,7 @@
               padding-bottom: 10px;
             "
           >
-            <h2>Add New Order</h2>
+            <h2><i class="bi bi-bag-plus"></i>Add New Order</h2>
             <form id="addOrderForm">
               <label>
                 Product:
@@ -288,7 +288,7 @@
               padding-bottom: 10px;
             "
           >
-            <h2>Your Preferences</h2>
+            <h2><i class="bi bi-gear"></i>Your Preferences</h2>
             <p id="userPrefs"></p>
             <label>
               Update Your Preferences:
@@ -319,7 +319,10 @@
             class="hidden"
             style="max-width: 100%; padding: 1rem"
           >
-            <h2>Admin Tools: All Users & Preferences</h2>
+            <h2>
+              <i class="bi bi-person-up"></i>Admin Tools: All Users &
+              Preferences
+            </h2>
             <div
               style="
                 overflow-x: auto;
@@ -350,7 +353,10 @@
           </div>
 
           <div id="superAdminSection" class="hidden">
-            <h2>Super Admin Panel: Manage User Roles</h2>
+            <h2>
+              <i class="bi bi-person-lock"></i>Super Admin Panel: Manage User
+              Roles
+            </h2>
             <table id="roleManageTable">
               <thead>
                 <tr>
